<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@android:color/white"
        android:paddingHorizontal="12dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/menu_descrip"
            android:src="@drawable/ic_menu"
            app:tint="#333333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_constraintStart_toEndOf="@id/iv_menu"
            app:layout_constraintEnd_toStartOf="@id/iv_search"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    style="@style/TabTextStyle.Unselected"
                    android:id="@+id/tab_shangcheng"
                    android:text="@string/tab_shangcheng" />

                <TextView
                    style="@style/TabTextStyle.Unselected"
                    android:id="@+id/tab_beijing"
                    android:text="@string/tab_beijing" />

                <TextView
                    style="@style/TabTextStyle.Unselected"
                    android:id="@+id/tab_tuangou"
                    android:text="@string/tab_tuangou" />

                <TextView
                    style="@style/TabTextStyle.Unselected"
                    android:id="@+id/tab_guanzhu"
                    android:text="@string/tab_guanzhu" />

                <TextView
                    style="@style/TabTextStyle.Selected"
                    android:id="@+id/tab_shequ"
                    android:text="@string/tab_shequ" />

                <TextView
                    style="@style/TabTextStyle.Unselected"
                    android:id="@+id/tab_tuijian"
                    android:text="@string/tab_tuijian" />


            </LinearLayout>
        </HorizontalScrollView>

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/menu_descrip"
            android:src="@drawable/ic_search"
            app:tint="#333333"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintVertical_bias="1.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_feed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="2dp"
            android:paddingTop="4dp"
            android:paddingEnd="2dp"
            tools:listitem="@layout/item_post_card" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/load_error_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp"
        android:visibility="gone"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/load_error"
            app:tint="#CCCCCC"
            android:contentDescription="加载错误" />

        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="网络请求失败，请检查网络连接！"
            android:textSize="16sp"
            android:textColor="#666666" />

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="点击重试" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
